Change some styling

--- a/index.Rmd
+++ b/index.Rmd
@@ -17,19 +17,23 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## Watch the `{golem}` team code live!
 
-Join us on Twitch for sessions of live-coding! During these streams, we will be building Shiny applications live using the `{golem}` package.
+Join us on Twitch for live-coding sessions! During these streams, we will be building Shiny apps live using the `{golem}` package.
 
-`r emo::ji("link")` https://www.twitch.tv/thinkr_fr `r emo::ji("link")`
+<div align = "center">
+
+#### `r emo::ji("link")` https://www.twitch.tv/thinkr_fr `r emo::ji("link")`
+
+</div>
 
 ## Upcoming Stream(s)
 
-### First live stream `r emo::ji("party")` 
+### First live stream `r emo::ji("birthday_cake")` 
 
-<li> `r emo::ji("man_technologist")`: Colin Fay, <a href = "https://twitter.com/_ColinFay">@_ColinFay</a> </li>
+<li> `r emo::ji("man_technologist")` Colin Fay, <a href = "https://twitter.com/_ColinFay">@_ColinFay</a> </li>
 
-<li> `r emo::ji("link")`: https://www.twitch.tv/thinkr_fr </li>
+<li> `r emo::ji("link")` https://www.twitch.tv/thinkr_fr </li>
 
-<li> `r emo::ji("time")`: __2020-01-13 21.00 Paris Time__. </li>
+<li> `r emo::ji("time")` __2020-01-13 21.00 Paris Time__. </li>
 
 ```{r echo = FALSE, message=FALSE}
 library(magrittr)
@@ -41,7 +45,7 @@ list(
   "America/Los_Angeles" = with_tz(d, "America/Los_Angeles"),
   "Australia/Sydney" = with_tz(d, "Australia/Sydney")
 ) %>%
-  details::details(summary = 'See in Other Timezones')
+  details::details(summary = 'See Event in Other Timezones')
 ```
 
 
@@ -50,6 +54,8 @@ list(
 `{golem}` is a framework for building production grade Shiny Apps. 
 
 Learn more about `{golem}` at: https://github.com/ThinkR-open/golem
+
+<hr>
 
 <div align = "center" class="nav-footer">
   <h4>ThinkR is a french compagny of R experts.</h4>
