--- a/index.Rmd
+++ b/index.Rmd
@@ -25,6 +25,25 @@ Join us on Twitch for live-coding sessions! During these streams, we will be bui
 
 </div>
 
+<!--<div id="twitch-embed"></div>
+
+<script src="https://embed.twitch.tv/embed/v1.js"></script>
+
+<script type="text/javascript">
+  var embed = new Twitch.Embed("twitch-embed", {
+    width: 854,
+    height: 480,
+    channel: "thinkr_fr",
+    layout: "video",
+    autoplay: false
+  });
+
+  embed.addEventListener(Twitch.Embed.VIDEO_READY, () => {
+    var player = embed.getPlayer();
+    player.play();
+  });
+</script>-->
+
 ## Upcoming Stream(s)
 
 ### First live stream `r emo::ji("birthday_cake")` 
@@ -66,5 +85,11 @@ Learn more about `{golem}` at: https://github.com/ThinkR-open/golem
     <li><a href="https://github.com/thinkr-open"> <i class="fa fa-github fa-3x"></i> </a> </li>  
     <li><a href="contact@thinkr.fr"> <i class="fa fa-envelope fa-3x"></i> </a></li>
     </ul>
+</div>
+
+<hr>
+
+<div>
+Website built on top of [milligram.css](https://milligram.io/).
 </div>
 
